# madrona_ezsim

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: python-format.yml  python-wheels.yml
cmake/: dependencies.cmake
include/madrona/: cuda_utils.hpp  math.inl  mesh_bvh.hpp  mw_gpu.hpp
include/madrona/py/: utils.hpp
include/madrona/render/: cuda_batch_render_assets.hpp  ecs.hpp  render_mgr.hpp
py/: _redir_template.py  madrona_py_build.py
scripts/: parse_device_tracing.py  parse_host_tracing.py  profile.py
scripts/perf_benchmark/: README.md  batch_benchmark.py  benchmark_configs.py  benchmark_madrona.py  benchmark_maniskill.py  benchmark_omni.py  benchmark_profiler.py  benchmark_pyrender.py  benchmark_report_generator.py  process_xml.py
scripts/perf_benchmark/configs/: benchmark_config_full.yml  benchmark_config_madrona.yml  benchmark_config_omni.yml  benchmark_config_smoke_test.yml
scripts/perf_benchmark/example_report/: index.html  perf_data.csv
src/bridge/: CMakeLists.txt  bindings.cpp  geometry.hpp  mgr.cpp  mgr.hpp  sim.cpp  sim.hpp  sim.inl  types.hpp  viewer.cpp
src/bridge/examples/: demo.py  simple_demo.py
src/bridge/gs_madrona/: __init__.py  renderer_gs.py
src/bridge/madrona_gs/: renderer_gs.py
src/common/: CMakeLists.txt  cuda_utils.cpp  mesh_bvh_builder.cpp
src/mw/: CMakeLists.txt  cpp_compile.cpp  cuda_compile_helpers.cpp  cuda_exec.cpp
src/mw/device/: bvh_raycast.cpp  ecs_render_bridge.cpp  sort_archetype.cpp
src/mw/device/include/: cfloat
src/mw/device/include/madrona/: bvh.hpp
src/python/: CMakeLists.txt  bindings.cpp  jax_register.py  utils.cpp
src/render/: CMakeLists.txt  api.cpp  asset_processor.cpp  batch_renderer.cpp  batch_renderer.hpp  ecs_system.cpp  render_common.hpp  render_ctx.cpp  render_mgr.cpp
src/render/core_wip/metal/shaders/: shader_common.h
src/render/shader/: CMakeLists.txt  compiler.cpp
src/render/shaders/: batch_draw_depth.hlsl  batch_draw_rgb.hlsl  batch_shadow_draw.hlsl  batch_shadow_gen.hlsl  draw_deferred_depth.hlsl  draw_deferred_rgb.hlsl  post_process.hlsl  shader_common.h  shader_utils.hlsl
src/render/vk/: backend.cpp  memory.cpp  memory.hpp
src/render/vk/scripts/: gen_vk_dispatch.py
src/viz/: viewer_renderer.cpp
